--- a/geoloaction.html
+++ b/geoloaction.html
@@ -50,6 +50,7 @@
   <div class="container">
     <h2>Distance to Kasem Bundit University</h2>
     <button onclick="getLocation()">Find My Distance</button>
+    <button class="back-button" onclick="goBack()">← Back</button>
     <div class="result" id="result">Waiting for location...</div>
   </div>
 
