--- a/geoloaction.html
+++ b/geoloaction.html
@@ -25,7 +25,7 @@
     h2 {
       margin-bottom: 20px;
     }
-    button {
+    .primary-button {
       width: 100%;
       padding: 10px;
       background-color: #0077cc;
@@ -34,9 +34,23 @@
       border-radius: 5px;
       cursor: pointer;
       font-size: 16px;
+      margin-bottom: 10px;
     }
-    button:hover {
+    .primary-button:hover {
       background-color: #005fa3;
+    }
+    .back-button {
+      width: 100%;
+      padding: 10px;
+      background-color: #6c757d;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    .back-button:hover {
+      background-color: #5a6268;
     }
     .result {
       margin-top: 20px;
@@ -49,8 +63,8 @@
 
   <div class="container">
     <h2>Distance to Kasem Bundit University</h2>
-    <button onclick="getLocation()">Find My Distance</button>
-    <button class="back-button" onclick="goBack()">← Back</button>
+    <button onclick="getLocation()" class="primary-button">Find My Distance</button>
+    <button onclick="goBack()" class="back-button">← Back</button>
     <div class="result" id="result">Waiting for location...</div>
   </div>
 
@@ -79,7 +93,7 @@
     }
 
     function haversine(lat1, lon1, lat2, lon2) {
-      const R = 6371; // Radius of Earth in km
+      const R = 6371;
       const dLat = toRad(lat2 - lat1);
       const dLon = toRad(lon2 - lon1);
       const a = Math.sin(dLat/2) * Math.sin(dLat/2) +
@@ -92,6 +106,7 @@
     function toRad(deg) {
       return deg * (Math.PI / 180);
     }
+
     function goBack() {
       window.history.back();
     }
